# precise_metronome

./: .gitignore  CHANGELOG.md  HANDOFF.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.claude/: settings.local.json
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  click_synth.cpp  click_synth.h  jni_bridge.cpp  metronome_engine.cpp  metronome_engine.h
android/src/main/kotlin/com/repeatlab/precise_metronome/: MetronomeService.kt  NativeBridge.kt  PreciseMetronomePlugin.kt
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
ios/: precise_metronome.podspec
ios/Classes/: ClickSynth.swift  MetronomeEngine.swift  PreciseMetronomePlugin.swift
lib/: precise_metronome.dart
lib/src/: background_config.dart  metronome.dart  subdivision.dart  tap_tempo.dart  time_signature.dart  voice.dart
test/: metronome_test.dart  subdivision_test.dart  tap_tempo_test.dart  time_signature_test.dart
